--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <head>
-  <link rel="icon" href="">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <nav>
-      <ul class="nav_links">
-        <li><a href="#">Startseite</a></li>
-        <li><a href="#">Über mich</a></li>
-        <li><a href="#">Gallerie</a></li>
-      </ul>
-    </nav>
+    <div class="wrapper">
+      <nav class="nav">
+        <ul class="nav__list" role="menubar">
+          <li class="nav__item"><a class="nav__link" href="index.html">Startseite</a></li>
+          <li class="nav__item"><a class="nav__link" href="news.asp">Gallerie</a></li>
+          <li class="nav__item"><a class="nav__link" href="contact.asp">Kontakt</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  <footer>
+    <div class="content">
+
+    </div>
+  </footer>
 </body>
