--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
       </nav>
     </div>
   </header>
-  <footer>
+
+  <div class="parallax"></div>
     <div class="content">
+        just a test
+    </div>
+  <div class="parallax"></div>
+  <footer>
+    <div class="info">
 
     </div>
   </footer>
