--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <nav class="nav">
         <ul class="nav__list" role="menubar">
           <li class="nav__item"><a class="nav__link" href="index.html">Startseite</a></li>
-          <li class="nav__item"><a class="nav__link" href="news.asp">Gallerie</a></li>
-          <li class="nav__item"><a class="nav__link" href="contact.asp">Kontakt</a></li>
+          <li class="nav__item"><a class="nav__link" href="gallerie.html">Gallerie</a></li>
+          <li class="nav__item"><a class="nav__link" href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </div>
@@ -17,7 +17,25 @@
 
   <div class="parallax"></div>
     <div class="content">
-        just a test
+        <div class="text_box">
+          <h1>Mein Name ist Oscar</h1>
+        </div>
+
+        <div class="text_box">
+          <h1>19 Jahre alt</h1>
+          geboren 2003
+        </div>
+
+        <div class="text_box">
+          <h1>7 Jahre</h1>
+          erfahrung als Programmierer
+        </div>
+
+        <div class="text_box">
+          <h1>7 Jahre</h1>
+          erfahrung als Programmierer
+        </div>
+
     </div>
   <div class="parallax"></div>
   <footer>
